# ps3toolbox

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/ps3toolbox/: __init__.py  __main__.py  cli.py
src/ps3toolbox/core/: crypto.py  iso.py  keys.py
src/ps3toolbox/covers/: __init__.py  downloader.py  sync.py
src/ps3toolbox/games/: __init__.py  metadata.py  organize_cli.py  organizer.py  scanner.py
src/ps3toolbox/ps2/: decrypt.py  encrypt.py  header.py  limg.py
src/ps3toolbox/utils/: disc_detect.py  errors.py  progress.py  validation.py
src/ps3toolbox/utils/fs/: __init__.py  provider.py
tests/: test_cli.py  test_covers_sync.py  test_crypto.py  test_disc_detect.py  test_encrypt_disc_num.py  test_header.py  test_iso.py  test_organize.py
