[project]
name = "ps3toolbox"
version = "0.1.0"
description = "Tools for PS3 homebrew operations - PS2 ISO encryption and more"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Matheus", email = "" }
]
keywords = ["ps3", "ps2", "encryption", "homebrew", "iso"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
]

dependencies = [
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "aiofiles>=25.1.0",
    "thefuzz>=0.22.1",
    "pillow>=12.0.0",
    "aiohttp>=3.13.2",
]


[project.scripts]
ps3toolbox = "ps3toolbox.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/ps3toolbox"
Repository = "https://github.com/yourusername/ps3toolbox"
Issues = "https://github.com/yourusername/ps3toolbox/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ps3toolbox"]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["ps3toolbox"]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
allow_untyped_decorators = true
allow_untyped_calls = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/ps3toolbox --cov-report=term-missing --cov-report=html"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
